made ipdates to wallet

--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
+MPESA_ENVIRONMENT=sandbox
+MPESA_SANDBOX_URL=https://sandbox.safaricom.co.ke
+MPESA_PRODUCTION_URL=https://api.safaricom.co.ke
 MPESA_CONSUMER_KEY=your_consumer_key
 MPESA_CONSUMER_SECRET=your_consumer_secret
 MPESA_B2C_SHORTCODE=your_b2c_shortcode
+MPESA_C2B_SHORTCODE=your_c2b_shortcode
+MPESA_PASSKEY=your_passkey
 MPESA_INITIATOR_NAME=your_initiator_name
 MPESA_SECURITY_CREDENTIAL=your_security_credential
-MPESA_RESULT_URL=https://yourdomain.com/b2c_result.php
-MPESA_TIMEOUT_URL=https://yourdomain.com/b2c_timeout.php
-MPESA_SANDBOX_URL=https://sandbox.safaricom.co.ke
-MPESA_PRODUCTION_URL=https://api.safaricom.co.ke
-MPESA_ENVIRONMENT=sandbox
+MPESA_RESULT_URL=https://yourdomain.com/mpesa/callback
+MPESA_TIMEOUT_URL=https://yourdomain.com/mpesa/timeout
